@@ -4,6 +4,8 @@
 ^Graph-Easy-[0-9]
 ^Makefile.(old|bak)\z
 ^Makefile\z
+^MYMETA\.yml\z
+^MYMETA\.json\z
 ^[^\\\/]*\.pl
 pm_to_blib
 \.svn
