@@ -4,12 +4,13 @@ author:
   - '- 2008 by Tels L<http://bloodgate.com>'
   - 'Tels <nospam-abuse@bloodgate.com>'
 build_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.62
   Test::More: 0.62
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.62
 distribution_type: module
-generated_by: 'Module::Install version 1.00'
+dynamic_config: 1
+generated_by: 'Module::Install version 1.04'
 license: gpl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -29,4 +30,4 @@ requires:
   perl: 5.008002
 resources:
   license: http://opensource.org/licenses/gpl-license.php
-version: 0.70
+version: 0.71
